Fix overflow on notes picker

--- a/src/client/containers/NotesContainer/styles.scss
+++ b/src/client/containers/NotesContainer/styles.scss
@@ -14,7 +14,6 @@
   }
 
   .picker {
-    min-width: 300px;
     padding: 30px 0 30px 30px;
     @include flex(column);
     > .Button {
